#4 add link to home page to show shirts for user
Add link around full name in competition progress bar partial view, link
pops up Sweaty T-Shirts list for the user.  Delete link appears if user
is me OR if I am admin.

--- a/Sweaty_T_Shirt/Views/Competition/EditCompetition.cshtml
+++ b/Sweaty_T_Shirt/Views/Competition/EditCompetition.cshtml
@@ -24,6 +24,12 @@
                 .css('display','block');
             });
 
+            /*this re-wires the cpb name link to do a colorbox popup instead of posting back to server.*/
+            $('a.progressbar-link').on('click', function () {
+                $.colorbox({ href: $(this).attr('href'), open: true, iframe: true, scrolling: true, width: '700px', height: "700px" });
+                return false;
+            });
+
             //this rewires the "Delete" link to confirm deletion in popup.  
             $('.delete-userincompetition-warning').on('click', function () {
                 $('#UserFullName').text($(this).attr('userFullName'));
