--- a/Sweaty_T_Shirt/Views/Home/Index.cshtml
+++ b/Sweaty_T_Shirt/Views/Home/Index.cshtml
@@ -55,7 +55,13 @@
                     .children('.ui-progressbar-value')
                     .html(value)
                     .css('display','block');
-                    });
+                });
+
+                /*this re-wires the cpb name link to do a colorbox popup instead of posting back to server.*/
+                $('a.progressbar-link').on('click', function () {
+                    $.colorbox({ href: $(this).attr('href'), open: true, iframe: true, scrolling: true, width: '700px', height: "700px" });
+                    return false;
+                });
                 </text>
             }}
            
