--- a/Sweaty_T_Shirt/Views/Competition/SweatyTShirts.cshtml
+++ b/Sweaty_T_Shirt/Views/Competition/SweatyTShirts.cshtml
@@ -3,13 +3,28 @@
     Layout = "~/Views/Shared/_LayoutIFrame.cshtml";
     ViewBag.Title = "Edit Sweaty T Shirts";
     string competitionName = Model.Count > 0 ? Model.FirstOrDefault().Competition.Name : null;
+    string userName = Model.FirstOrDefault().UserProfile.FullName;
+    bool isAbleToDelete = (bool)ViewBag.IsAbleToDelete;
+
+    var grid = new WebGrid(Model, canPage: false, canSort: false);
+    IEnumerable<WebGridColumn> columns = grid.Columns(
+                    grid.Column(columnName: "Description", header: "Description"),
+                    grid.Column(columnName: "Amount", header: "Amount"),
+                    grid.Column(columnName: "CreatedDate", header: "Date Submitted", format: item => string.Format("{0:d}", item.CreatedDate)));
+    
+    if(isAbleToDelete)
+    {
+        columns = columns.Concat(grid.Columns(grid.Column(header: string.Empty,
+                        format: item => Html.ActionLink("Delete", "DeleteSweatyTShirt",
+                        new { sweatyTShirtID = item.SweatyTShirtID, competitionID = item.CompetitionID }))));
+    }
 }
 
 @section scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-<h2>@competitionName Sweaty-T-Shirts</h2>
+<h2>@userName Sweaty-T-Shirts in @competitionName</h2>
 <input type="button" onclick="parent.$.colorbox.close();" value="Close" />
 
     <fieldset>
@@ -17,22 +32,14 @@
 
         @if (Model.Count > 0)
         {
-            var grid = new WebGrid(Model, canPage: false, canSort: false);
             @grid.GetHtml(tableStyle: "webgrid",
                 rowStyle: "webgrid-row",
                 alternatingRowStyle: "webgrid-alternating-row",
-                columns: grid.Columns(
-                    grid.Column(columnName: "Description", header: "Description"),
-                    grid.Column(columnName: "Amount", header: "Amount"),
-                    grid.Column(columnName: "CreatedDate", header: "Date Submitted", format: item => string.Format("{0:d}", item.CreatedDate)),
-                    grid.Column(header: string.Empty, 
-                        format: item => Html.ActionLink("Delete", "DeleteSweatyTShirt", 
-                        new { sweatyTShirtID = item.SweatyTShirtID, competitionID = item.CompetitionID }))
-            ))
+                columns: columns)
         }
         else
         {
-            <p>You do not have any Sweaty-T-Shirts in this competition.</p>
+            <p>The user does not have any Sweaty-T-Shirts in this competition.</p>
         }
     </fieldset>
 
