--- a/Sweaty_T_Shirt/Views/Shared/_Layout.cshtml
+++ b/Sweaty_T_Shirt/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    bool isAdmin = (bool)HttpContext.Current.Items[Sweaty_T_Shirt.Controllers.ControllerHelpers.ISADMIN];
+    bool isAdmin = (bool)HttpContext.Current.Items["IsAdmin"];
 }
 <!DOCTYPE html>
 <html lang="en">
