--- a/Sweaty_T_Shirt/Views/Competition/EditCompetition.cshtml
+++ b/Sweaty_T_Shirt/Views/Competition/EditCompetition.cshtml
@@ -86,7 +86,7 @@
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Description)</td>
-            <td>@Html.EditorFor(m => m.Description)</td>
+            <td>@Html.TextAreaFor(m => m.Description, 25, 50, new { })</td>
         </tr>
         <tr>
             <td>@Html.LabelFor(m => m.Points)</td>
