--- a/Sweaty_T_Shirt/Views/Home/About.cshtml
+++ b/Sweaty_T_Shirt/Views/Home/About.cshtml
@@ -9,16 +9,45 @@
 
 <article>
     <p>
-        First paragraph of article section.
+        <b>Holiday Challenge!</b>
     </p>
 
     <p>
-        Second paragraph of article section.
+        Starts 12:01 AM PST November 15th, 2013 to 11:59 PM January 5th, 2014.
+        </p>
+    <p>
+        This is an honor system; if you are wondering if something qualifies ask the group.
+        </p>
+    <p>
+        The system is designed to reward consistency.
+        <p/>
+
+        Scoring
+    <ul>
+        <li>
+            1.	One Shirt – 30 minutes of continuous exercise at an exertion level sufficient create a sweaty shirt
+        </li>
+        <li>
+            2.	Two Shirts – 2 hours of continuous exertion consistent with working yourself pretty hard fully soaked sweaty shirt
+        </li>
+        <li>
+            3.	Three Shirts – 4+ hours of continuous workout.  Last competition Dayton did a Marathon to get 3, exceptionally long or brutal bike ride (Pine Mt. Loop?) etc.  Longer term commitment and fully spent when done.  Usually requires a day of rest after.
+        </li>
+</ul>
+    <p>
+        <b>Notes on competition</b>
+    </p>
+    <p>
+        Continuous means just what it says, you cannot break up workouts to add up time in a given day to get more shirts that day.
+        <br />No partial credit, you only get 1, 2, or 3 shirts on a given day.
+        <br />Multi-shirt workouts are to be avoided during the workweek.  Exceptions are allowed for weekday races, holidays, vacation time, etc.  This keeps the playing field level for those in full time jobs.
+        <br />A day of surfing or snow Skiing counts for 1 STS.
+    </p>
+    <p><b>The Prize!</b></p>
+    <p>
+        Magnum of wine chosen by the losers.  Approximate total value of around $500.
     </p>
 
-    <p>
-        Third paragraph of article section.
-    </p>
 </article>
 
 <aside>
