fix progress bars
fix progress bars on home page

--- a/Sweaty_T_Shirt/Views/Home/Index.cshtml
+++ b/Sweaty_T_Shirt/Views/Home/Index.cshtml
@@ -6,8 +6,7 @@
     int goal = 0;
     if(Model.Competition != null)
     {
-        //goal = (Model.Competition.Points.Value==0 ? Model.Competition.Points.Value : Model.Competition.MaxPoints);
-        goal = Model.Competition.MaxPoints;
+        goal = (Model.Competition.Points.HasValue ? Model.Competition.Points.Value : Model.Competition.MaxPoints);
     }
 }
 @section scripts {
