competition icon and email thread
Various small fixes; allow user to upload a competition icon; send
sweaty-t-shirt emails on background thread and give user ability to set
how often they receive.

--- a/Sweaty_T_Shirt/Content/Site.css
+++ b/Sweaty_T_Shirt/Content/Site.css
@@ -449,6 +449,15 @@ input, textarea {
     width: 300px;
 }
 
+    input[type="radio"] {
+        width:auto;
+        white-space:nowrap;
+    }
+
+    input[type="text"].numeric {
+        width:50px;
+    }
+
 textarea {
     font-family: inherit;
     width: 500px;
