--- a/Sweaty_T_Shirt/Views/Shared/ClosePopup.cshtml
+++ b/Sweaty_T_Shirt/Views/Shared/ClosePopup.cshtml
@@ -14,7 +14,7 @@
                     <text>parent.location='@ViewBag.Location';</text> 
                 }
                 else{
-                      <text>parent.location.reload();</text>
+                      <text>parent.location = parent.location;</text>
                 }
             }
         });
